# bismuth

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
include/bismuth/: bismuth.hpp
include/bismuth/classes/: classes.hpp  logger.hpp
include/bismuth/utils/: log.hpp  utils.hpp
include/bismuth/utils/macros/: check-for-channel.hpp  macros.hpp  options.hpp  requests.hpp
pch/: namespace.hpp
src/classes/: logger.cpp
